修改项目结构 完善心脏复苏函数

--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "promise-catch",
   "version": "1.0.0",
-  "description": "",
-  "main": "promiseCatch.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "HuYanSiJun",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git@gitee.com:huyan-sijun/promise-catch.git"
+  },
+  "keywords": [
+    "异常处理",
+    "心脏复苏"
+  ],
+  "description": ""
 }
