--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hy-utils",
+  "name": "hysj-utils",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "dist/hysjUtils.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c"
   },
-  "author": "HuYanSiJun",
+  "author": "huyansijun",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "去重",
     "数组对象去重"
   ],
+  "private": false,
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
@@ -27,7 +28,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
