--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/hysjUtils.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "docs": "docsify serve docs"
   },
   "author": "huyansijun",
   "license": "ISC",
